--- a/Ranta.Proxy.Test/Ranta.Proxy.Test.csproj
+++ b/Ranta.Proxy.Test/Ranta.Proxy.Test.csproj
@@ -45,13 +45,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="DwzProxyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YouDaoTranslationProxyTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ranta.Proxy.Net45\Ranta.Proxy.Net45.csproj">
