--- a/Ranta.Proxy.Net45/Ranta.Proxy.Net45.csproj
+++ b/Ranta.Proxy.Net45/Ranta.Proxy.Net45.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{103C2533-B24D-4236-9647-4FF231DEA6F2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ranta.Proxy.Net45</RootNamespace>
-    <AssemblyName>Ranta.Proxy.Net45</AssemblyName>
+    <RootNamespace>Ranta.Proxy</RootNamespace>
+    <AssemblyName>Ranta.Proxy</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
